# JutgeBench

./: .env.example  .gitignore  BENCHMARK.md  CLAUDE.md  DEVELOPMENT.md  README.md  benchmark_config.yaml  cli.py  config.yaml  jutge_api_client.py  main.py  pyproject.toml  submit_hello_world.py  test_system.py  view_benchmark_results.py
examples/: get_server_time.py  list_available_compilers.py  print_problems_status.py  read_problem.py  show_user_profile.py  submit_problem.py
jutge_solver/: __init__.py  benchmark.py  benchmark_config.py  config.py  problem_analyzer.py  solution_generator.py  solver.py  verdict_manager.py
tests/: __init__.py  test_system.py
tests/integration/: test_benchmark_code_extraction.py  test_cpp_template_benchmark_integration.py  test_problem_analysis_integration.py
tests/unit/: test_code_extraction_debug.py  test_cpp_template_validation.py  test_problem_analyzer.py  test_problem_statement_formatting.py  test_solution_generator.py
