[project]
name = "jutge-problem-solver"
version = "0.1.0"
description = "An AI-powered solver for Jutge programming problems"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "requests-toolbelt>=1.0.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
    "rich>=14.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
]
benchmark = [
    "anthropic>=0.25.0",
    "google-generativeai>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jutge_solver"]
